[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/GameOver/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Themes/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://Media/volcano.jpg" type="Texture" id=3]
[ext_resource path="res://Fonts/connection_ii/ConnectionII.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 0.862
anchor_bottom = 1.0
margin_right = 648.312
margin_bottom = 304.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 64.0
margin_top = 24.0
margin_right = 766.0
margin_bottom = 425.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "You travelled 1 trillion hooray"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = -194.0
margin_right = 375.0
theme = ExtResource( 2 )

[node name="PlayAgainButton" type="Button" parent="VBoxContainer"]
margin_right = 325.0
margin_bottom = 29.0
text = "Play Again"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
margin_top = 33.0
margin_right = 325.0
margin_bottom = 62.0
text = "Main Menu"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 325.0
margin_bottom = 95.0
text = "Exit"

[connection signal="pressed" from="VBoxContainer/PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
